# audio8bit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cache.py  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
audio8bit/: __init__.py  cache.py  cli.py  converter.py
docs/: README_DE.md  README_ES.md  README_FR.md  README_HI.md  README_IT.md  README_JA.md  README_KR.md  README_PT.md  README_RU.md  README_ZH.md
