[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "audio8bit"
version = "0.0.0"
description = "Turn a song into an 8-bit / chiptune arrangement of its melody (vocal or instrumental)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Olya Pimenova" }]
keywords = ["audio", "8bit", "chiptune", "melody", "transcription", "cli", "dsp", "ffmpeg"]
classifiers = [
    "Environment :: Console",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = ["numpy>=1.21", "demucs>=4.0", "librosa>=0.10", "basic-pitch>=0.4"]

[project.scripts]
audio8bit = "audio8bit.cli:main"

[tool.setuptools]
packages = ["audio8bit"]
